tests/scratch.scss
@import '../index';

/////////////////////////////////////////////
//////////////// catch active ///////////////
/////////////////////////////////////////////

$throw-catch: true;

.test {
  error: error('this is an error message from a function');
  warn: warn('this is a warn message from a function');
  debug: debug('this is a debug message from a function');
}

@include error('this is an error message from a mixin');
@include warn('this is a warn message from a mixin');
@include debug('this is a debug message from a mixin');

/////////////////////////////////////////////
///////// catch inactive (no errors) ////////
/////////////////////////////////////////////

$throw-catch: false;

.test {
  // error: error('this is an error message from a function');
  warn: warn('this is a warn message from a function');
  debug: debug('this is a debug message from a function');
}

// @include error('this is an error message from a mixin');
@include warn('this is a warn message from a mixin');
@include debug('this is a debug message from a mixin');
